logs/dag_id=init_ods_layer/run_id=manual__2024-07-12T13:42:43.356583+00:00/task_id=dump_source/attempt=1.log
[2024-07-12T13:42:47.944+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-12T13:42:47.966+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:42:43.356583+00:00 [queued]>
[2024-07-12T13:42:47.973+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:42:43.356583+00:00 [queued]>
[2024-07-12T13:42:47.973+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-07-12T13:42:47.986+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): dump_source> on 2024-07-12 13:42:43.356583+00:00
[2024-07-12T13:42:48.019+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=6565) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-12T13:42:48.021+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'init_ods_layer', 'dump_source', 'manual__2024-07-12T13:42:43.356583+00:00', '--job-id', '44', '--raw', '--subdir', 'DAGS_FOLDER/init_ods.py', '--cfg-path', '/tmp/tmpccxp0g84']
[2024-07-12T13:42:48.022+0000] {standard_task_runner.py:63} INFO - Started process 6567 to run task
[2024-07-12T13:42:48.023+0000] {standard_task_runner.py:91} INFO - Job 44: Subtask dump_source
[2024-07-12T13:42:48.118+0000] {task_command.py:426} INFO - Running <TaskInstance: init_ods_layer.dump_source manual__2024-07-12T13:42:43.356583+00:00 [running]> on host 8047aa21fe02
[2024-07-12T13:42:48.155+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'dump_source', field 'bash_command'. Template: '\n        export PGPASSWORD=\'{{ ti.xcom_pull(key=\'source_db\')[\'password\'] | replace("\'", "\'"\'"\'") }}\' &&\n        pg_dump -U {{ ti.xcom_pull(key=\'source_db\')[\'user\'] }} -h {{ ti.xcom_pull(key=\'source_db\')[\'host\'] }} -n source_data -f {{ params.dump_file }} {{ ti.xcom_pull(key=\'source_db\')[\'database\'] }}\n    '
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 2, in template
jinja2.exceptions.TemplateSyntaxError: unexpected char '"' at 94
[2024-07-12T13:42:48.158+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1337, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 2, in template
jinja2.exceptions.TemplateSyntaxError: unexpected char '"' at 94
[2024-07-12T13:42:48.163+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=init_ods_layer, task_id=dump_source, run_id=manual__2024-07-12T13:42:43.356583+00:00, execution_date=20240712T134243, start_date=20240712T134247, end_date=20240712T134248
[2024-07-12T13:42:48.170+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 44 for task dump_source (unexpected char '"' at 94; 6567)
[2024-07-12T13:42:48.209+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-12T13:42:48.221+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-12T13:42:48.222+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
